2012-10-03  Dirk Pranke  <dpranke@chromium.org>

        Mark platform/chromium/virtual/gpu/fast/canvas/getPutImageDataPairTest.html as slow on Mac Lion Release
        https://bugs.webkit.org/show_bug.cgi?id=79679

        Unreviewed, expectations change.

        * platform/chromium/TestExpectations:

2012-10-03  Adam Barth  <abarth@webkit.org>

        Crash when calling document.open during unload
        https://bugs.webkit.org/show_bug.cgi?id=98287

        Reviewed by Nate Chapin.

        Test that we don't crash when calling document.open during the unload event.

        * fast/parser/document-open-in-unload-expected.txt: Added.
        * fast/parser/document-open-in-unload.html: Added.

2012-10-03  Hans Wennborg  <hans@chromium.org>

        Speech JavaScript API: Add SpeechRecognition.interimResults attribute
        https://bugs.webkit.org/show_bug.cgi?id=98279

        Reviewed by Adam Barth.

        Update test to check for the interimResults attribute.

        * fast/speech/scripted/basics-expected.txt:
        * fast/speech/scripted/basics.html:

2012-10-03  Hans Wennborg  <hans@chromium.org>

        Speech JavaScript API: Remove resultdeleted event
        https://bugs.webkit.org/show_bug.cgi?id=98272

        Reviewed by Adam Barth.

        Update layout test not to check for onresultdeleted event handler.

        * fast/speech/scripted/basics-expected.txt:
        * fast/speech/scripted/basics.html:

2012-10-03  Andrey Kosyakov  <caseq@chromium.org>

        Unreviwed gardening -- adjusted expectations for tiny-layer-rotated.html

        * platform/chromium/TestExpectations:

2012-10-03  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed gardening -- added expectations for 3 time-suggestion-picker-appearance tests.

        * platform/chromium-linux/platform/chromium/fast/forms/time/time-suggestion-picker-appearance-expected.png: Added.